--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -38,7 +38,6 @@ aside {
 	height: 3em;
 	top: 0em;
 	left: 0em;
-	font-size: 1em;
 	background: indigo;
 }
 .message p{
@@ -50,10 +49,107 @@ aside {
 	font-size: 1.3em;
 }
 footer{
+	display: block;
 	width: 100%;
 	background-color: indigo;
 	position: fixed;
 	bottom: 0;
-	padding-left: 2em;
 	text-align: center;
+}
+@media(device-width: 1800px)
+{
+	.clock {
+		top: 3.6em;
+		font-size: 9.5em;
+	}
+}
+@media(device-width: 1366px) {
+	.clock {
+		width: 5.5em;
+		height: 2em;
+		text-align: center;
+		position: relative;
+		top: 2.8em;
+		left: -0.4em;
+		color: #fff;
+		font-size: 8.5em;
+		cursor: default;
+	}
+}
+@media(device-width: 1080px) {
+	.clock {
+		top: 1.2em;
+		left: -0.2em;
+		font-size: 15em;
+	}
+	.message {
+		font-size: 1.5em;
+	}
+	footer p {
+		font-size: 2em;
+	}
+	aside {
+		bottom: 1em;
+		right: 1em;
+	}
+	.switch {
+		height: 90px;
+		width: 90px;
+	}
+}
+@media(device-width: 1440px) {
+	.clock {
+		top: 1.2em;
+		left: -0.2em;
+		font-size: 15em;
+	}
+
+	.message {
+		font-size: 1.5em;
+	}
+
+	footer p {
+		font-size: 2em;
+	}
+
+	aside {
+		bottom: 1em;
+		right: 1em;
+	}
+
+	.switch {
+		height: 90px;
+		width: 90px;
+	}
+}
+@media(device-width: 720px) {
+	.clock {
+		top: 1.5em;
+		left: -0.25em;
+		font-size: 10em;
+	}
+
+	.message {
+		font-size: 1.2em;
+	}
+
+	footer p {
+		font-size: 1.5em;
+	}
+
+	.switch {
+		height: 30px;
+		width: 30px;
+	}
+}
+@media(device-width: 480px) {
+	.clock {
+		top: 1.2em;
+		left: 0.1em;
+		font-size: 6em;
+	}
+
+	.message {
+		padding-top: 0.4em;
+	}
 }
