--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -167,6 +167,25 @@ footer{
 		width: 30px;
 	}
 }
+@media(device-width: 600px) {
+	.clock {
+		top: 1em;
+		left: -0.4em;
+		font-size: 9em;
+	}
+	.message {
+		font-size: 1.2em;
+	}
+
+	footer p {
+		font-size: 1.5em;
+	}
+
+	.switch {
+		height: 30px;
+		width: 30px;
+	}
+}
 @media(device-width: 480px) {
 	.clock {
 		top: 1.2em;
@@ -203,7 +222,7 @@ footer{
 		font-size: 0.7em;
 	}
 }
-@media(device-width: 240px) {
+@media screen and (max-width: 240px) {
 	.clock {
 		top: 0.8em;
 		left: -0.3em;
